# edeploy

./: .gitignore  .travis.yml  Makefile  NEWS  README.rst  base.exclude  base.install  ceph.install  detect.py  diskinfo.py  edeploy  edeploy.conf  functions  galera.install  haproxy.install  hpacucli.py  img.install  init  ipmi.py  matcher.py  mysql.install  openstack-compute.install  openstack-controller.install  openstack-swift-proxy.install  openstack-swift-storage.install  openstack.install  policy-rc.d  pxe.install  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_diskinfo.py  test_hpacucli.py  test_matcher.py  test_upload.py  tox.ini  try_match  try_match.py  update-scenario.sh  (+2 more)
ansible/: Debian.yml  RedHat.yml  edeploy  edeploy-apache.conf  edeploy-httpd.conf  edeploy-install.yml  edeploy.prof  health-check.prof  rsyncd.conf  tmpfiles-edeploy.conf
config/: backup.cmdb  backup.configure  backup.specs  dell-m520-compute.cmdb  dell-m520-compute.configure  dell-m520-compute.specs  devstack.configure  devstack.specs  hp-mlx-ctrl.cmdb  hp-mlx-ctrl.configure  hp-mlx-ctrl.specs  hp-mlx.cmdb  hp-mlx.configure  hp-mlx.specs  hp.cmdb  hp.configure  hp.specs  kvm-test.cmdb  kvm-test.configure  kvm-test.specs  kvm-usb.configure  kvm-usb.specs  sm2026.cmdb  sm2026.configure  sm2026.specs  state  vm-centos.cmdb  vm-centos.configure  vm-debian.cmdb  vm-debian.configure  vm-debian.specs  vm.configure  vm.specs
debian/: changelog  control  copyright  edeploy-build.install  edeploy-www.install  gbp.conf  rules  watch
docs/: AHC.rst  Makefile  conf.py  (+1 more)
(+21338 files in other folders)
