[metadata]
name = edeploy
summary = eDeploy Baremetal and Virtual provisionnign and updating system
description-file = README.rst
author = eNovance
author-email = licencing@enovance.com
home-page = http://www.enovance.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
